[gd_scene load_steps=2 format=2]

[ext_resource path="res://scenes/menu/store/PlayerPanel.gd" type="Script" id=1]

[node name="PlayerPanel" type="VBoxContainer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -125.0
margin_top = -275.0
margin_right = 125.0
margin_bottom = 275.0
rect_min_size = Vector2( 300, 550 )
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1
script = ExtResource( 1 )

[node name="PlayerNameContainer" type="MarginContainer" parent="."]
editor/display_folded = true
margin_top = 70.0
margin_right = 300.0
margin_bottom = 111.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 0
custom_constants/margin_top = 10

[node name="PlayerName" type="Label" parent="PlayerNameContainer"]
margin_top = 10.0
margin_right = 300.0
margin_bottom = 41.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "test
"
align = 1

[node name="PlayerTextureContainer" type="CenterContainer" parent="."]
margin_top = 115.0
margin_right = 300.0
margin_bottom = 115.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3

[node name="PlayerInventoryLabelContainer" type="CenterContainer" parent="."]
editor/display_folded = true
margin_top = 119.0
margin_right = 300.0
margin_bottom = 133.0
size_flags_horizontal = 3

[node name="PlayerInventoryLabel" type="Label" parent="PlayerInventoryLabelContainer"]
margin_left = 117.0
margin_right = 182.0
margin_bottom = 14.0
text = "Inventory:"
align = 1
valign = 1

[node name="PlayerInventoryContainer" type="ScrollContainer" parent="."]
margin_top = 137.0
margin_right = 300.0
margin_bottom = 297.0
rect_min_size = Vector2( 0, 160 )
size_flags_horizontal = 3
scroll_horizontal_enabled = false

[node name="CenterContainer" type="CenterContainer" parent="PlayerInventoryContainer"]
margin_right = 300.0
grow_horizontal = 2
size_flags_horizontal = 3

[node name="PlayerInventoryGrid" type="GridContainer" parent="PlayerInventoryContainer/CenterContainer"]
margin_left = 150.0
margin_right = 150.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 0
size_flags_vertical = 3
custom_constants/vseparation = 0
custom_constants/hseparation = 0
columns = 3

[node name="StoreInventoryLabelContainer" type="CenterContainer" parent="."]
editor/display_folded = true
margin_top = 301.0
margin_right = 300.0
margin_bottom = 315.0

[node name="StoreInventoryLabel" type="Label" parent="StoreInventoryLabelContainer"]
margin_left = 131.0
margin_right = 168.0
margin_bottom = 14.0
text = "Store:"
align = 1
valign = 1

[node name="StoreInventoryContainer" type="ScrollContainer" parent="."]
margin_top = 319.0
margin_right = 300.0
margin_bottom = 479.0
rect_min_size = Vector2( 0, 160 )
size_flags_horizontal = 3
scroll_horizontal_enabled = false

[node name="CenterContainer" type="CenterContainer" parent="StoreInventoryContainer"]
margin_right = 300.0
grow_horizontal = 2
size_flags_horizontal = 3

[node name="StoreInventoryGrid" type="GridContainer" parent="StoreInventoryContainer/CenterContainer"]
margin_left = 150.0
margin_right = 150.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 0
size_flags_vertical = 3
custom_constants/vseparation = 0
custom_constants/hseparation = 0
columns = 3
